--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "mmo test",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "nconf": "^0.8.4",
+    "winston": "^2.2.0",
+    "express-winston": "2.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
