--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.14.0",
     "nconf": "^0.8.4",
     "winston": "^2.2.0",
-    "express-winston": "2.0.0"
+    "express-winston": "2.0.0",
+    "socket.io": "^1.4.8"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
