--- a/public/bower.json
+++ b/public/bower.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.1.0",
-    "babylonjs": "^2.4.1",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "three.js": "threejs#*",
+    "babel-polyfill": "^0.0.1",
+    "bluebird": "^3.4.6"
   }
 }
