--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "mmo",
   "version": "1.0.0",
-  "description": "mmo test",
+  "description": "Mmo test",
+  "author": "Alexander Kolesov",
+  "license": "ISC",
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
-    "nconf": "^0.8.4",
-    "winston": "^2.2.0",
     "express-winston": "2.0.0",
-    "socket.io": "^1.4.8"
+    "nconf": "^0.8.4",
+    "socket.io": "^1.4.8",
+    "winston": "^2.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Alexander Kolesov",
-  "license": "ISC"
+    "start": "node index.js"
+  }
 }
