--- a/public/bower.json
+++ b/public/bower.json
@@ -2,7 +2,8 @@
   "name": "mmo-client",
   "homepage": "https://github.com/greenflame/mmo",
   "authors": [
-    "Alexander Kolesov <kolesov.alex.s@gmail.com>"
+    "Alexander Kolesov <kolesov.alex.s@gmail.com>",
+    "Anton Kolesov <kolesov.anton.s@gmail.com>"
   ],
   "description": "Web client for mmo game",
   "main": "index.html",
@@ -11,7 +12,6 @@
     "jquery": "^3.1.0",
     "socket.io-client": "^1.4.8",
     "three.js": "threejs#*",
-    "babel-polyfill": "^0.0.1",
     "bluebird": "^3.4.6"
   }
 }
