--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "express-winston": "2.0.0",
+    "joi": "^9.0.4",
     "nconf": "^0.8.4",
     "socket.io": "^1.4.8",
     "winston": "^2.2.0"
